# Git-Clustering

./: .gitignore  Makefile  README.md  pyproject.toml  quick_start.ipynb  requirements.txt
.github/workflows/: code_quality.yml  package_test.yml
datasets/toy_datasets/: moons.csv
git_cluster/: kde.py
notebooks/: Quick_Start_with_GIT.ipynb  quick_start.ipynb
notebooks/Acuracy Benchmark/: GIT Accuracy Benchmark - Large Scale Datasets.ipynb  GIT Accuracy Benchmark - Small Scale Datasets.ipynb
notebooks/Performance and Scalability Benchmark/: GIT Performance and Scalability Benchmark.ipynb
notebooks/Robustness/: GIT Robustness Benchmark.ipynb.ipynb
src/dataloaders/: __init__.py  mnist_loader.py  real_dataloader.py  toy_dataloader.py
src/git_cluster/: __init__.py  detect_local_mode.py  git.py  kde.py  topo_graph.py
src/utils/: __init__.py  measures.py  plot_tools.py
tests/: GIT_test.ipynb  test_git_clustering.py
